Fix dark mode code block scrollbars

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -109,6 +109,11 @@
 	html {
 		background: var(--background);
 		--tw-border-color: var(--border);
+		color-scheme: light;
+	}
+
+	[data-theme='dark'] {
+		color-scheme: dark;
 	}
 
 	::selection {
@@ -159,8 +164,29 @@
 .expressive-code pre {
 	color-scheme: light;
 	scrollbar-color: var(--ec-sbThumbCol) transparent;
+	scrollbar-width: thin;
 }
 
 [data-theme='dark'] .expressive-code pre {
 	color-scheme: dark;
+}
+
+.expressive-code pre::-webkit-scrollbar {
+	width: 0.8rem;
+	height: 0.8rem;
+}
+
+.expressive-code pre::-webkit-scrollbar-track {
+	background: transparent !important;
+}
+
+.expressive-code pre::-webkit-scrollbar-thumb {
+	background-color: var(--ec-sbThumbCol) !important;
+	border: 0.25rem solid transparent !important;
+	background-clip: content-box !important;
+	border-radius: 999px !important;
+}
+
+.expressive-code pre::-webkit-scrollbar-thumb:hover {
+	background-color: var(--ec-sbThumbHoverCol) !important;
 }
